# katra

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRACT-acc-thalamus-feedback.md  CONTRACT-attention-gate-rl.md  CONTRACT-autonomous-executive.md  CONTRACT-bayesian-surprise.md  CONTRACT-drift-diffusion.md  CONTRACT-drives-to-action.md  CONTRACT-pfc-inhibitory-control.md  CONTRACT-pfc-working-memory.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  docker-compose.yml
dashboard/: index.html
docs/: AGENT-COMMUNICATION-SETUP.md  API-REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS-LOOP.md  CONFIGURATION.md  DEPLOYMENT.md  EMERGENCE-EXPERIMENT.md  KATRA-EDGE.md  MCP-TOOLS.md  MIGRATION.md  OPENCLAW-INTEGRATION.md  PHASE0-CONTRACT.md  PHASE1-CONTRACT.md  PHASE2-CONTRACT.md  PHASE3-CONTRACT.md  PHASE4-CONTRACT.md  QUICKSTART.md  SECURITY.md  SLEEP-CONSOLIDATION.md
helm/katra/: Chart.yaml  README.md  values.yaml
integrations/kolega-code/: README.md
research/brain-gap-analysis/: MASTER-SYNTHESIS.md  PRE-SYNTHESIS.md  attention-mechanisms.md  brain-function-gap-map.md  decision-motivation-action.md  memory-decay-models.md  memory-poisoning-defense.md  technology-math-survey.md
research/memory-architecture-landscape/: README.md
scripts/: adaptive_heartbeat.py  agent_executor.py  migrate_from_cognitive_memory.py  recall-broad.sh  salience_agent.py  test-memory-layers.sh  test-rest-api.sh  trigger_kolegacode.sh
scripts/python/: adaptive_heartbeat.py  agent_executor.py  authority_matrix.py  inter_agent_bridge.py  opencode_background.py  opencode_session_start.py  salience_agent.py  wake_service.py
sdks/python/: pyproject.toml
server/: package-lock.json  package.json
watcher/: katra-watcher.service  katra_opencode_extractor.py  katra_watcher.py  kolega_code_extractor.py  watcher-config.example.json
(+106 files in other folders)
