[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "katra-sdk"
version = "1.0.0"
# PyPI: pip install katra-sdk
description = "Python SDK for Katra — Cognitive Memory as a Service"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Katra Contributors" },
]
keywords = [
    "katra",
    "cognitive-memory",
    "memory",
    "mcp",
    "ai",
    "llm",
    "agent",
    "vector-search",
    "semantic-memory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/kolegadev/katra"
Documentation = "https://github.com/kolegadev/katra/tree/main/sdks/python"
Repository = "https://github.com/kolegadev/katra"
Issues = "https://github.com/kolegadev/katra/issues"

[tool.setuptools.packages.find]
include = ["katra*"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
